# dispute

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  resources.rc
assets/: dispute.desktop
src/: audio.rs  barrier.rs  debug.rs  instance.rs  main.rs  notifications.rs  settings.rs  tray.rs  utils.rs
src/styles/: mod.rs
ui/: Cargo.toml  build.rs
ui/components/: globals.slint  main.slint
ui/components/styles/geek_cats/: main.slint  wave.slint
ui/components/styles/retro/: button.slint  completed_pomodoros.slint  main.slint  palette.slint  segment.slint  settings.slint  seven_segment.slint  status.slint
ui/components/widgets/: button.slint  checkbox.slint  spinbox.slint
ui/src/: lib.rs
