[package]
name = "dispute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "debuginfo"
opt-level = "s"

[dependencies]
ui = { path = "ui" }

serde = { version = "1.0.138", features = ["derive"] }
serde_yaml = "0.9.25"
directories = "5.0.1"
image = { version = "0.24", default-features = false, features = ["png"] }
async-std = { version = "1.12.0", features = ["unstable"] }
rodio = { version = "0.17.1", default-features = false, features = ["mp3"] }
tray-item = { version = "0.8.0" }
notify-rust = "4.8.0"
dark-light = "1.0.0"
notify = "6.1"
fslock = "0.2.1"

[target.'cfg(target_family = "unix")'.dependencies]
tray-item = { version = "0.8.0", features = ["ksni"] }

[target.'cfg(target_family = "windows")'.build-dependencies]
windres = "0.2.2"