[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
# Slint uses a heckin' lot of macros. Enabling all optimizations
# actually speeds up compilation significantly
opt-level = 3

[dependencies]
slint = { version = "1.1.1", default-features = false, features = ["std", "compat-1-0", "backend-winit", "renderer-winit-skia"] }

[build-dependencies]
slint-build = "1.1.1"
